fixed picture clipping

--- a/port/src/style/home/_introduction.scss
+++ b/port/src/style/home/_introduction.scss
@@ -31,6 +31,7 @@
     position: absolute;
     display: flex;
     justify-items: flex-end;
+    top: 7.5vh;
     width: 40vw;
     right: 0vw;
     height: 90vh;
@@ -66,7 +67,6 @@
 }
 
 .ilyesPicture {
-    margin-top: 10vh;
     padding-top: 10vh;
     position: absolute;
     height: 90vh;
